# Javita

./: CMakeLists.txt
src/: main.cpp
src/apps/builder/: core.cpp  core.h
src/engine/: core.cpp  core.h  shader.cpp  shader.h
src/examples/: primitives.cpp  primitives.h
